self-signed/self-signed-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: self-signed-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: self-signed-app
  template:
    metadata:
      labels:
        app: self-signed-app
    spec:
      containers:
      - name: aks-helloworld
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: self-signed-app
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: self-signed-app
