self-signed/internal-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: internal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dpgexample.com
    secretName: internal-tls-secret
  rules:
  - host: dpgexample.com
    http:
      paths:
      - backend:
          serviceName: internal-app
          servicePort: 80
        path: /(.*)
